data/derived/comb/progs/unify/prog6167.ml.out
Characters 206-211:
  | Average (e1,e2) ->  "((" ^ exprToString e1 ^ " + " exprToString e2 ^ ")/2)"
                                                 ^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
